--- a/src/reset.css
+++ b/src/reset.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600;1,700&display=swap');
+@import 'react-toastify/dist/ReactToastify.css';
 
 /* Most rule resets borrowed from https://www.joshwcomeau.com/css/custom-css-reset/ */
 *, *::before, *::after {
@@ -9,6 +10,10 @@
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
+
+  /* Toastify style overrides need to be done via CSS vars */
+  --toastify-color-dark: #252526;
+  --toastify-color-progress-dark: linear-gradient(to right, #B835C3, #8EF1C1);
 }
 
 html, body {
@@ -42,3 +47,4 @@ a:active {
 * {
   font-family: 'IBM Plex Mono', monospace;
 }
+
